argo/apps/media/lazylibrarian/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/calibre:latest
        ports:
        - containerPort: 5299
        volumeMounts:
        - name: config
          mountPath: /config
        - name: books
          mountPath: /books
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: calibre-config
      - name: books
        persistentVolumeClaim:
          claimName: calibre-books-pvc
      - name: downloads
        persistentVolumeClaim:
          claimName: calibre-downloads-pvc
