argo/apps/media/lazylibrarian/service.yaml
# apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  namespace: media
spec:
  selector:
    app: lazylibrarian
  ports:
    - name: http
      port: 80
      targetPort: 5299
