argo/apps/media/lazylibrarian/ingress.yaml
    # Middleware: redirect HTTP -> HTTPS
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lazylibrarian-redirect-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# IngressRoute for HTTPS
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lazylibrarian
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`library.smeyer.ca`)
      kind: Rule
      services:
        - name: lazylibrarian
          port: 80
  tls:
    secretName: wildcard-smeyer-ca-tls
---
# IngressRoute for HTTP (only used for redirect)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lazylibrarian-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`library.smeyer.ca`)
      kind: Rule
      middlewares:
        - name: lazylibrarian-redirect-https
      services:
        - name: lazylibrarian
          port: 80
